Fixing the stylling of the breadcrumbs to wrap when the width is not enough

--- a/static/css/breadcrumbs.css
+++ b/static/css/breadcrumbs.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 0.5rem;
+    flex-wrap: wrap;
     list-style: none;
 
     &>li {
